--- a/package.json
+++ b/package.json
@@ -1,40 +1,58 @@
 {
-  "name": "poker",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@symfony/webpack-encore": "^4.2.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "proxy": "http://192.168.56.1:3000/",
+    "name": "poker",
+    "version": "0.1.0",
+    "private": true,
+    "homepage": "http://192.168.56.1:3000/home",
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.4.0",
+        "@fortawesome/free-solid-svg-icons": "^6.4.0",
+        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@symfony/webpack-encore": "^4.2.0",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "bcrypt": "^5.1.0",
+        "bcryptjs": "^2.4.3",
+        "connect": "^3.7.0",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "d3": "^7.8.5",
+        "dayjs": "^1.11.7",
+        "express": "^4.18.2",
+        "framer-motion": "^10.12.16",
+        "jsonwebtoken": "^9.0.0",
+        "mongodb": "^5.5.0",
+        "mongoose": "^7.2.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.8.0",
+        "react-scripts": "5.0.1",
+        "react-transition-group": "^4.4.5",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
